--- a/pages/hospitalhome.ejs
+++ b/pages/hospitalhome.ejs
@@ -4,11 +4,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-<h2>Hospitals near you are-Hospitals near you are-Hospitals near you are-Hospitals near you are-Hospitals near you are-</h2>
-<ul>
-<% for(var i=0;i<JSON.stringify(hospitals).length;i++){%>
-	<l1><%=hospitals[i]%><br></l1>
-<% }; %>
-</ul>
+<h2>Hospitals near you are-</h2>
+<table>
+<% for(var i=0; i < data.length; i++) { %>
+   <tr>
+     <td><%= data[i].name %></td>
+     <td><%= data[i].contact %></td>
+   </tr>
+<% } %>
+</table>
 </body>
 </html>
