--- a/pages/hospitalhome.ejs
+++ b/pages/hospitalhome.ejs
@@ -9,7 +9,7 @@
 <% for(var i=0; i < data.length; i++) { %>
    <tr>
      <td><%= data[i].name %></td>
-     <td><%= data[i].contact %></td>
+     <td><a href="tel:+<%= data[i].contact %>"><%= data[i].contact %></a></td>
    </tr>
 <% } %>
 </table>
