--- a/pages/hospitalhome.ejs
+++ b/pages/hospitalhome.ejs
@@ -1,6 +1,6 @@
 <html>
 <head>
-<link href="/main.css" rel="stylesheet" type="text/css">
+<link href="__dirname/public/main.css" rel="stylesheet" type="text/css">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
