--- a/pages/hospitalhome.ejs
+++ b/pages/hospitalhome.ejs
@@ -58,7 +58,7 @@
 <% for(var i=0; i < data.length; i++) { %>
    <tr>
      <td><%= data[i].name %></td>
-     <td><a class="button" href="tel:+<%= data[i].contact %>">Call Hospital</a></td>
+     <td><a class="button" href="tel:+<%= data[i].contact %>">Call</a></td>
      
    </tr>
 <% } %>
