--- a/pages/hospitalhome.ejs
+++ b/pages/hospitalhome.ejs
@@ -53,7 +53,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-<h2>Hospitals near you are-</h2>
+<h2><%=banner => near you are-</h2>
 <table>
 <% for(var i=0; i < data.length; i++) { %>
    <tr>
