--- a/pages/hospitalhome.ejs
+++ b/pages/hospitalhome.ejs
@@ -60,10 +60,10 @@ p { color: #f8f8f8; font-family: 'Raleway',sans-serif; font-size: 12px; font-wei
 <table>
 <% for(var i=0; i < data.length; i++) { %>
    <tr>
-     <td><h2><%= data[i].name %></h2></td>
+     <td width="100%"><h2><%= data[i].name %></h2></td>
      </tr>
      <tr>
-     <td>
+     <td width="100%">
      <h3><%= data[i].address %></h3>
      </td>
   	<tr>
