--- a/pages/hospitalhome.ejs
+++ b/pages/hospitalhome.ejs
@@ -3,7 +3,7 @@
 <style>
 h1 { color: black; font-family: 'Raleway',sans-serif; font-size: 30px; font-weight: 800; line-height: 72px; margin: 0 0 24px; text-align: center; text-transform: uppercase; }
 h2 { color: blue; font-family: 'Raleway',sans-serif; font-size: 18px; font-weight: 600; line-height: 36px; margin: 0 0 24px; text-align: center; }
-p { color: #f8f8f8; font-family: 'Raleway',sans-serif; font-size: 12px; font-weight: 500; line-height: 32px; margin: 0 0 24px; }
+p { color: #f8f8f8; font-family: 'Raleway',sans-serif; font-size: 10px; font-weight: 500; line-height: 32px; margin: 0 0 24px; }
 .button {
     display: inline-block;
     text-align: center;
@@ -57,7 +57,7 @@ p { color: #f8f8f8; font-family: 'Raleway',sans-serif; font-size: 12px; font-wei
 </head>
 <body>
 <h1><%=banner %> near you are-</h1>
-<table>
+<table width="100%" border="0" cellspacing="0" cellpadding="0>
 <% for(var i=0; i < data.length; i++) { %>
    <tr>
      <td width="100%"><h2><%= data[i].name %></h2></td>
