--- a/pages/hospitalhome.ejs
+++ b/pages/hospitalhome.ejs
@@ -60,7 +60,7 @@ p { color: #f8f8f8; font-family: 'Raleway',sans-serif; font-size: 10px; font-wei
 <table width="100%" border="0" cellspacing="0" cellpadding="0>
 <% for(var i=0; i < data.length; i++) { %>
    <tr>
-     <td width="100%"><h2><%= data[i].name %></h2></td>
+     <td width="100%" align="center"><h2><%= data[i].name %></h2></td>
      </tr>
      <tr>
      <td width="100%">
