--- a/pages/hospitalhome.ejs
+++ b/pages/hospitalhome.ejs
@@ -57,21 +57,26 @@ p { color: #f8f8f8; font-family: 'Raleway',sans-serif; font-size: 10px; font-wei
 </head>
 <body>
 <h1><%=banner %> near you are-</h1>
-<table width="100%" border="0" cellspacing="0" cellpadding="0>
+<!--<table width="100%" border="0" cellspacing="0" cellpadding="0>-->
 <% for(var i=0; i < data.length; i++) { %>
-   <tr>
-     <td width="100%" align="center"><h2><%= data[i].name %></h2></td>
+   <ul>
+     <!--<td width="100%" align="center">-->
+     <li><h2><%= data[i].name %></h2></li>
+     <!--</td>
      </tr>
      <tr>
-     <td width="100%">
-     <h3><%= data[i].address %></h3>
-     </td>
+     <td width="100%">-->
+     <li><h3><%= data[i].address %></h3></li>
+     <!--</td>
   	<tr>
-     <td width='50%'><a class="button" href="tel:+<%= data[i].contact %>">Call</a></td>
-     <td width='50%'><a class="button" href="tel:+<%= data[i].contact %>">Call</a></td>
+  	<li>
+     <td width='50%'>--><a class="button" href="tel:+<%= data[i].contact %>">Call</a><!--</td>
+     <td width='50%'>--><a class="button" href="tel:+<%= data[i].contact %>">Call</a></li><!--</td>
      </tr>
-   </tr>
+  
+
+</table>-->
 <% } %>
-</table>
+ </ul>
 </body>
 </html>
