--- a/pages/hospitalhome.ejs
+++ b/pages/hospitalhome.ejs
@@ -59,7 +59,7 @@ p { color: #f8f8f8; font-family: 'Raleway',sans-serif; font-size: 10px; font-wei
 <h1><%=banner %> near you are-</h1>
 <!--<table width="100%" border="0" cellspacing="0" cellpadding="0>-->
 <% for(var i=0; i < data.length; i++) { %>
-   <ul>
+   <ul style="list-style: none;">
      <!--<td width="100%" align="center">-->
      <li><h2><%= data[i].name %></h2></li>
      <!--</td>
