--- a/pages/hospitalhome.ejs
+++ b/pages/hospitalhome.ejs
@@ -71,12 +71,13 @@ p { color: #f8f8f8; font-family: 'Raleway',sans-serif; font-size: 10px; font-wei
   	<tr>
   	<li>
      <td width='50%'>--><a class="button" href="tel:+<%= data[i].contact %>">Call</a><!--</td>
-     <td width='50%'>--><a class="button" href="tel:+<%= data[i].contact %>">Call</a></li><!--</td>
+     <td width='50%'>--><a class="button" href="tel:+<%= data[i].contact %>">Call</a><!--</td>
      </tr>
   
 
 </table>-->
 <% } %>
+</li>
  </ul>
 </body>
 </html>
