--- a/pages/hospitalhome.ejs
+++ b/pages/hospitalhome.ejs
@@ -1,9 +1,9 @@
 <html>
 <head>
 <style>
-h1 { color: black; font-family: 'Raleway',sans-serif; font-size: 30px; font-weight: 800; line-height: 72px; margin: 0 0 24px; text-align: center; text-transform: uppercase; }
-h2 { color: blue; font-family: 'Raleway',sans-serif; font-size: 18px; font-weight: 600; line-height: 36px; margin: 0 0 24px; text-align: center; }
-p { color: #f8f8f8; font-family: 'Raleway',sans-serif; font-size: 10px; font-weight: 500; line-height: 32px; margin: 0 0 24px; }
+h1 { color: black; font-family: 'Raleway',sans-serif; font-size: 22px; font-weight: 800; line-height: 72px; margin: 0 0 24px; text-align: center; text-transform: uppercase; }
+h2 { color: blue; font-family: 'Raleway',sans-serif; font-size: 20px; font-weight: 600; line-height: 36px; margin: 0 0 24px; text-align: center; }
+p { color: #f8f8f8; font-family: 'Raleway',sans-serif; font-size: 8px; font-weight: 500; line-height: 32px; margin: 0 0 24px; }
 .button {
     display: inline-block;
     text-align: center;
@@ -57,27 +57,21 @@ p { color: #f8f8f8; font-family: 'Raleway',sans-serif; font-size: 10px; font-wei
 </head>
 <body>
 <h1><%=banner %> near you are-</h1>
-<!--<table width="100%" border="0" cellspacing="0" cellpadding="0>-->
+
 <% for(var i=0; i < data.length; i++) { %>
    <ul style="list-style: none;">
-     <!--<td width="100%" align="center">-->
      <li><h2><%= data[i].name %></h2></li>
-     <!--</td>
-     </tr>
-     <tr>
-     <td width="100%">-->
      <li><h3><%= data[i].address %></h3></li>
-     <!--</td>
-  	<tr>
-  	<li>
-     <td width='50%'>--><a class="button" href="tel:+<%= data[i].contact %>">Call</a><!--</td>
-     <td width='50%'>--><a class="button" href="tel:+<%= data[i].contact %>">Call</a><!--</td>
-     </tr>
-  
-
-</table>-->
-</li>
- </ul>
+  	 <li>
+  	 	<table>
+  	 	<tr>
+  	 	<td style="padding: 15px;">
+   		<a class="button" href="tel:+<%= data[i].contact %>">Call</a>
+     	<a class="button" href="tel:+<%= data[i].contact %>">Call</a>
+	 	</tr>
+	 	</table>
+	 </li>
+   </ul>
 <% } %>
 
 </body>
