--- a/pages/hospitalhome.ejs
+++ b/pages/hospitalhome.ejs
@@ -65,10 +65,10 @@ p { color: #f8f8f8; font-family: 'Raleway',sans-serif; font-size: 8px; font-weig
   	 <li>
   	 	<table>
   	 	<tr>
-  	 	<td style="horizontal-align: left;">
+  	 	<td style="horizontal-align: left; width:50%" >
 
    		<a class="button" href="tel:+<%= data[i].contact %>">Call</a></td>
-   		<td style="horizontal-align: right;">
+   		<td style="horizontal-align: right; width:50%">
      	<a class="button" href="tel:+<%= data[i].contact %>">Navigate</a></td>
 	 	</tr>
 	 	</table>
