--- a/pages/hospitalhome.ejs
+++ b/pages/hospitalhome.ejs
@@ -69,7 +69,7 @@ p { color: #f8f8f8; font-family: 'Raleway',sans-serif; font-size: 8px; font-weig
 
    		<a class="button" href="tel:+<%= data[i].contact %>">Call</a></td>
    		<td style="horizontal-align: right; width:50%">
-     	<a class="button" href="tel:+<%= data[i].contact %>">Navigate</a></td>
+     	<a class="button" href="http://maps.google.com/maps?daddr=<%= data[i].loc.lat %>,<%= data[i].loc.long %>&amp;ll=">Navigate</a></td>
 	 	</tr>
 	 	</table>
 	 </li>
